|Sreejith| Update Malayalam translation

--- a/locales/ml.json
+++ b/locales/ml.json
@@ -183,25 +183,25 @@
 	"Description": "വിവരണം",
 	"Please type here...": "ഇവിടെ ടൈപ്പ് ചെയ്യുക...",
 	"Failed to submit the feedback. Please try again.": "ഫീഡ്ബാക്ക് രേഖപ്പെടുത്താൻ സാധിച്ചില്ല. വീണ്ടും ശ്രമിക്കുക",
-	"SUBMIT": "SUBMIT",
+	"SUBMIT": "സമ൪പ്പിക്കുക",
 	"Thank You for your valuable feedback": "നിങ്ങളുടെ വിലയേറിയ ഫീഡ്ബാക്കിന് നന്ദി",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "നിങ്ങളുടെ ഫീഡ്ബാക്ക് പറയൂ ഇന്ത്യയെ പ്രസക്തമായി നിലനി൪ത്താ൯ ഞങ്ങളെ സഹായിക്കുന്നു. ഫീഡ്ബാക്ക് നൽകാൻ നിങ്ങൾ സമയമെടുക്കുന്നതിനെ ഞങ്ങൾ അഭിനന്ദിക്കുന്നു",
 	"Back to Home": "തിരികെ ഹോം പേജിലേക്ക്",
 	"Report": "Report",
 	"Please speak clearly": "വ്യക്തമായി സംസാരിക്കുക",
 	"Low/No Background Noise": "മറ്റു ശബ്ദങ്ങൾ ഇല്ല /കുറവാണ്",
-	"Background Noise Detected": "Background Noise Detected",
-	"Report Content": "Report Content",
-	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
-	"Offensive": "Offensive",
-	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
-	"Prohibited Content": "Prohibited Content",
-	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
-	"Political Statement": "Political Statement",
-	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
-	"Misinformation": "Misinformation",
-	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
-	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
+	"Background Noise Detected": "പശ്ചാത്തല ശബ്ദങ്ങൾ കേൾക്കുന്നു",
+	"Report Content": "ഉള്ളടക്കം  റിപ്പോ൪ട്ട് ചെയ്യുക",
+	"Help us understand what’s wrong with the sentence": "ഈ വാചകത്തിലെ തെറ്റ് കണ്ടെത്താൻ ഞങ്ങളെ സഹായിക്കുക",
+	"Offensive": "കുറ്റകരമായവ",
+	"Hurting sentiments of religion, community or abusive content etc.": "മതത്തിന്രേയും സമൂഹത്തിന്റേയും വികാരം വ്രണ പ്പെടുത്തുന്നത് ആശ്ലീലമായത്,",
+	"Prohibited Content": "നിരോധിക്കപ്പെട്ട ഉള്ളടക്കം",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "വെറുപ്പ് നിറഞ്ഞത് /വിഭാഗീയത/അസഭ്യം/ലഹരി പ്രോൽസാഹനം മുതലായവ",
+	"Political Statement": "രാഷ്ട്രീയ പ്രസ്താവന",
+	"Hateful Political views, amplifying hate-speech etc.": "വെറുപ്പ് നിറഞ്ഞ രാഷ്ട്രീയ കാഴ്ചപ്പാടുകൾ,വിദ്വേഷപ്രചാരണം മുതലായവ",
+	"Misinformation": "തെറ്റായ വിവരങ്ങൾ",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "കേട്ടുകേൾവി പൊതുസംസാരം,വളച്ചൊടിച്ച വാ൪ത്തകൾ",
+	"Please specify the reason (Optional)": "ദയവായി കാരണം ബോധിപ്പിക്കുക",
 	"Thank You": "നന്ദി",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "നിങ്ങളുടെ ഫീഡ്ബാക്ക് പറയൂ ഇന്ത്യയെ പ്രസക്തമായി നിലനി൪ത്താ൯ ഞങ്ങളെ സഹായിക്കുന്നു. ഫീഡ്ബാക്ക് നൽകാൻ നിങ്ങൾ സമയമെടുക്കുന്നതിനെ ഞങ്ങൾ അഭിനന്ദിക്കുന്നു.",
 	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
