| Priyanshu | updated malayalam translation

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -197,5 +197,7 @@
 	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ",
 	"National Language Translation Mission": "ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ",
 	"Badge ID": "ಬ್ಯಾಜ್ ಐಡಿ",
-	"Download": "ಡೌನ್ ಲೋಡ್"
+	"Download": "ಡೌನ್ ಲೋಡ್",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
