--- a/locales/mr.json
+++ b/locales/mr.json
@@ -174,5 +174,7 @@
 	"Age Group Distribution": "वय गट वर्गीकरण",
 	"National Language Translation Mission": "राष्ट्रीय भाषा अनुवाद मिशन",
 	"Badge ID": "बॅज आयडी",
-	"Download": "डाउनलोड करा"
+	"Download": "डाउनलोड करा",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
