--- a/locales/or.json
+++ b/locales/or.json
@@ -240,5 +240,7 @@
 	"Back to Home": "ଘରକୁ ଫେରନ୍ତୁ",
 	"National Language Translation Mission": "ଜାତୀୟ ଭାଷା ଅନୁବାଦ ମିଶନ୍",
 	"Badge ID": "ବ୍ୟାଜ୍ ID",
-	"Download": "ଡାଉନଲୋଡ୍ କରନ୍ତୁ"
+	"Download": "ଡାଉନଲୋଡ୍ କରନ୍ତୁ",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
