--- a/locales/ta.json
+++ b/locales/ta.json
@@ -174,5 +174,7 @@
 	"Back to Home": "மீண்டும் முகப்புப் பக்கத்திற்கு",
 	"National Language Translation Mission": "தேசிய மொழி மொழிபெயர்ப்பு மிஷன்",
 	"Badge ID": "பேட்ஜ் ஐடி",
-	"Download": "பதிவிறக்கவும்"
+	"Download": "பதிவிறக்கவும்",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
