--- a/locales/bn.json
+++ b/locales/bn.json
@@ -272,5 +272,7 @@
 	"START CONTRIBUTING": "অবদান শুরু করুন",
 	"National Language Translation Mission": "রাষ্ট্রীয় ভাষা অনুবাদ মিশন",
 	"Badge ID": "ব্যাজ পরিচয়পত্র",
-	"Download": "ডাউনলোড"
+	"Download": "ডাউনলোড",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
