--- a/locales/ml.json
+++ b/locales/ml.json
@@ -25,7 +25,7 @@
 	"All the fields are optional": "എല്ലാ ഫീൽഡുകളും ഐച്ഛികമാണ്",
 	"Not You? Change User": "നിങ്ങളല്ലേ? യൂസറെ മാറ്റുക",
 	"Username": "യൂസർനെയിം",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Please don't use email or mobile number as user name": "യൂസർനെയിം ഒരു ഇമെയിൽ വിലാസമോ മൊബൈൽ നമ്പറോ ആകാൻ പാടില്ല",
 	"Mother Tongue": "മാതൃഭാഷ",
 	"Select Mother Tongue": "മാതൃഭാഷ തിരഞ്ഞെടുക്കുക",
 	"Age Group": "പ്രായ വിഭാഗം",
@@ -177,8 +177,8 @@
 	"Help us by validating the recordings that others have contributed": "മറ്റുള്ളവ൪ രേഖപ്പെടുത്തിയ ശബ്ടങ്ങൾ ശരിയാണോയെന്ന് പരിശോദിച്ചുകൊണ്ട് ഞങ്ങളെ സഹായിക്കുക.",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "പറയൂ ഇന്ത്യ: ഇന്ത്യൻ ഭാഷകൾക്കായുള്ള ഒരു ക്രൗഡ്‌സോഴ്സിങ് സംരംഭം",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ഇന്ത്യൻ ഭാഷകൾക്കായുള്ള ഒരു സംഭാഷണം തിരിച്ചറിയൽ (സ്പീച്ച് റെക്കഗ്നിഷൻ) സാങ്കേതികവിദ്യ വികസിപ്പിക്കാനായി, വൈവിധ്യമുള്ള ഇന്ത്യൻ ശബ്ദങ്ങളുടെ വിപുലമായ സ്വതന്ത്ര ഡാറ്റാ ശേഖരത്തിൻറെ ആവശ്യകതയുണ്ട്. ഇന്ത്യൻ ശബ്ദങ്ങളുടെ വൈവിധ്യമാർന്ന തുറന്ന ഡാറ്റാ ശേഖരം സൃഷ്ടിക്കുന്നതിന് നിങ്ങളുടെ ശബ്ദം മറ്റുള്ളവരിലേക്ക് എത്തിക്കാനും സംഭാവന നൽകാനും ബോലോ ഇന്ത്യ നിങ്ങളെ ക്ഷണിക്കുന്നു.",
-	"social sharing text with rank": "",
-	"social sharing text without rank": "",
+	"social sharing text with rank": " http://boloindia.nplt.in. യിൽ സ്വതന്ത്ര ഭാഷാ ശേഖരം നി൪മ്മിക്കുന്നതിന് ഞാൻ സംഭാവന നൽകി.മെഷീനുകൾ നമ്മുടെ ഭാഷ മനസ്സിലാക്കുന്നതിനായി നമ്മുടെ ശബ്ദം സംഭാവന ചെയ്യുന്നതിലൂടെ എനിക്കും നിങ്ങൾക്കും ഒരു മാറ്റം കൊണ്ടുവരുന്നതിന് സാധ്യമാണ്. പറയൂ ഇന്ത്യയിൽ നമ്മുടെ %language ഭാഷയുടെ റാങ്ക് %rank ആണ്.നിങ്ങളുടേതായ ഭാഗം സംഭാവന ചെയ്ത് ഭാഷയെ ശക്തിപ്പെടുത്തുക",
+	"social sharing text without rank": " http://boloindia.nplt.in. യിൽ സ്വതന്ത്ര ഭാഷാ ശേഖരം നി൪മ്മിക്കുന്നതിന് ഞാൻ സംഭാവന നൽകി.മെഷീനുകൾ നമ്മുടെ ഭാഷ മനസ്സിലാക്കുന്നതിനായി നമ്മുടെ ശബ്ദം സംഭാവന ചെയ്യുന്നതിലൂടെ എനിക്കും നിങ്ങൾക്കും ഒരു മാറ്റം കൊണ്ടുവരുന്നതിന് സാധ്യമാണ്. പറയൂ ഇന്ത്യയിൽ നമ്മുടെ <x> ഭാഷയുടെ റാങ്ക് <y> ആണ്.നിങ്ങളുടേതായ ഭാഗം സംഭാവന ചെയ്ത് ഭാഷയെ ശക്തിപ്പെടുത്തുക",
 	"Subject": "വിഷയം",
 	"Description": "വിവരണം",
 	"Please type here...": "ഇവിടെ ടൈപ്പ് ചെയ്യുക...",
@@ -209,7 +209,7 @@
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
 	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദം തിരിച്ചറിയാനുള്ള സംവിധാനങ്ങളിൽ ഇന്ത്യ സ്വയം പര്യാപ്തത നേടേണ്ടതാണ്.ഇതിനായി ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദങ്ങൾ നിറഞ്ഞ ഒരു സ്വതന്ത്ര ശബ്ദശേഖരം സൃഷ്ടിക്കുന്നതിന് നമ്മൾ ആഗ്രഹിക്കുന്നു.ഇന്ത്യ ഗവണമെന്റിന്റെ ദേശീയ ഭാഷ ത൪ജ്ജമ ദൗത്യത്തിനു കീഴിൽഎംഈഐറ്റിവൈ ആണ് നി൪വ്വഹിക്കുന്നത്.ഏക്സ്റ്റെപ് ഫൗണ്ടേഷൻ അതിന്റെ https://sunbird.org/projects/vakyansh  പോലെയുള്ള വിവിധ സംവിധാനങ്ങളിലൂടെ ഇതിനെ പിന്തുണക്കുന്നു.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദം തിരിച്ചറിയാനുള്ള സംവിധാനങ്ങളിൽ ഇന്ത്യ സ്വയം പര്യാപ്തത നേടേണ്ടതാണ്.ഇതിനായി ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദങ്ങൾ നിറഞ്ഞ ഒരു സ്വതന്ത്ര ശബ്ദശേഖരം സൃഷ്ടിക്കുന്നതിന് നമ്മൾ ആഗ്രഹിക്കുന്നു.ഇന്ത്യ ഗവണമെന്റിന്റെ ദേശീയ ഭാഷ ത൪ജ്ജമ ദൗത്യത്തിനു കീഴിൽഎംഈഐറ്റിവൈ ആണ് നി൪വ്വഹിക്കുന്നത്.ഏക്സ്റ്റെപ് ഫൗണ്ടേഷൻ അതിന്റെ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a>  പോലെയുള്ള വിവിധ സംവിധാനങ്ങളിലൂടെ ഇതിനെ പിന്തുണക്കുന്നു.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ഇതിനായി പറയൂ ഇന്ത്യ സ്വമനസ്സാ നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യുന്നതിന് നിങ്ങളെ ക്ഷണിക്കുന്നു.നിങ്ങളുടെ എല്ലാ സംഭാവനകളും ഉപയോഗപ്രദമായ രീതിയിൽ സമൂഹത്തിന് ലഭ്യമാക്കുന്നു. പിന്നീട് ഭാഷാ സാങ്കേതിക വിദഗ്ദ൪ ഈ സംഭാവനകളെ  ലോക നിലവാരത്തിലുള്ള  ശബ്ദതിരിച്ചറിയൽ സംവിധാനങ്ങൾ വികസിപ്പിക്കുന്നതിന് ഉപയോഗിക്കുന്നു.",
 	"India is a land of many languages, our digital strategy must reflect it.": "ഡിജിറ്റൽ സാങ്കേതികവിദ്യയ്ക്ക് പ്രാഥമിക പരിഗണന നൽകുന്ന സംവിധാനത്തിൽ നമ്മുടെ ബഹുഭാഷാ ഡിഎൻഎയുടെ അഭാവം ഇപ്പോഴുമുണ്ട്",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "ഇന്ത്യ നിരവധി ഭാഷകളുള്ള ഒരു വിശാല രാജ്യമായതിനാൽ, ഇന്ത്യയിലെ 90% ജനങ്ങളും അവരുടെ വിദ്യാഭ്യാസപരവും സാമൂഹികവും ഡിജിറ്റൽ സംബന്ധവുമായ പ്രവർത്തനങ്ങൾക്ക് പ്രാദേശിക ഭാഷകളെയാണ് ആശ്രയിക്കുന്നത്.",
@@ -220,5 +220,7 @@
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "വൈവിധ്യമാർന്ന ഇന്ത്യൻ ശബ്ദങ്ങളും അനുബന്ധ വാചകവും ഉൾപ്പെടുന്ന ഡാറ്റാസെറ്റുകളുടെ വലിയ ശേഖരം ആവശ്യമായ \"മെഷീൻ ലേണിങ്\" സാങ്കേതികവിദ്യയെ ശബ്ദം തിരിച്ചറിയൽ (സ്പീച്ച് റെക്കഗ്നിഷൻ) ആശ്രയിക്കുന്നു.  ഈ സംരംഭത്തിനായി ഉപയോഗിക്കാൻ സാധിക്കുന്ന വിധത്തിൽ, ഇന്ത്യൻ ഭാഷകൾ സംസാരിക്കുന്ന ഇന്ത്യൻ ശബ്ദങ്ങളുടെ വൈവിധ്യപൂർണ്ണമായ തുറന്ന ശേഖരമുണ്ടാക്കണമെന്ന് പറയൂ ഇന്ത്യയിലൂടെ ഏക്സ്റ്റെപ്പ് ആഗ്രഹിക്കുന്നു.",
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "ഒരു ടീം എന്ന നിലയിൽ, ഞങ്ങളോടൊപ്പം ചേരാനും ഈ സംരംഭത്തിലേക്ക് നിങ്ങളുടെ ശബ്ദത്തിന്റെ 30 മിനിറ്റ് വരെ സംഭാവന നൽകാനും ഞങ്ങൾ നിങ്ങളെ ക്ഷണിക്കുന്നു. നിങ്ങളുടെ ശബ്ദം ഒരു അവസരത്തിൽ പൂർണ്ണമായി റെക്കോർഡ് ചെയ്യുന്നതിൽ ബുദ്ധിമുട്ടുണ്ടാവാമെന്നതിനാൽ, ഞങ്ങളുടെ വെബ്സൈറ്റ് പല തവണകളിലായി സന്ദർശിച്ച് നിങ്ങൾ നിർത്തിയിടത്തു നിന്ന് തുടങ്ങാനുള്ള സംവിധാനം ഞങ്ങൾ ഒരുക്കിയിട്ടുണ്ട്.",
 	"Select a language": "ഭാഷ തിരഞ്ഞെടുക്കുക",
-	"START CONTRIBUTING": "സംഭാവന ചെയ്യാൻ തുടങ്ങാം"
+	"START CONTRIBUTING": "സംഭാവന ചെയ്യാൻ തുടങ്ങാം",
+	"Please validate any error message before proceeding": "തുടരുന്നതിനു മുമ്പ് ഏതെങ്കിലും പിശക് സന്ദേശം സാധൂകരിക്കുക",
+	"Help us understand what’s wrong with the recording": "റെക്കോ൪ഡിംഗിൽ എന്താണ് തെറ്റ് എന്ന് മനസിലാക്കാൻ ഞങ്ങളെ സഹായിക്കുക"
 }
