--- a/locales/te.json
+++ b/locales/te.json
@@ -177,5 +177,7 @@
 	"Most Contributed - <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>",
 	"National Language Translation Mission": "జాతీయ భాషా అనువాద మిషన్",
 	"Download": "డౌన్\u200Cలోడ్ చేయండి",
-	"Badge ID": "బ్యాడ్జ్ ID"
+	"Badge ID": "బ్యాడ్జ్ ID",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
