| Priyanshu | updated tooltip translation for hi,en,gu,kn,te,ta,ml,bn,as,mr

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -273,6 +273,6 @@
 	"National Language Translation Mission": "রাষ্ট্রীয় ভাষা অনুবাদ মিশন",
 	"Badge ID": "ব্যাজ পরিচয়পত্র",
 	"Download": "ডাউনলোড",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Help us understand what’s wrong with the recording": "রেকর্ডিং-এ কি ভুল হয়েছে তা আমাদের বুঝতে সাহায্য করুন",
+	"Please validate any error message before proceeding": "এগিয়ে যাওয়ার আগে যে কোনো ত্রুটি বার্তা বৈধ করুন"
 }
