--- a/locales/gu.json
+++ b/locales/gu.json
@@ -176,6 +176,6 @@
 	"National Language Translation Mission": "રાષ્ટ્રીય ભાષા ભાષાંતર અભિયાન",
 	"Badge ID": "બેજ આઇડી",
 	"Download": "ડાઉનલોડ કરો",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Help us understand what’s wrong with the recording": "રેકોર્ડિંગમાં શું ખોટું છે તે સમજવામાં અમને મદદ કરો",
+	"Please validate any error message before proceeding": "કૃપા કરીને પ્રક્રિયા કરતા પહેલાં કોઇપણ એરર સંદેશાને માન્યતા આપો"
 }
