--- a/locales/ta.json
+++ b/locales/ta.json
@@ -175,6 +175,6 @@
 	"National Language Translation Mission": "தேசிய மொழி மொழிபெயர்ப்பு மிஷன்",
 	"Badge ID": "பேட்ஜ் ஐடி",
 	"Download": "பதிவிறக்கவும்",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Help us understand what’s wrong with the recording": "பதிவில் இருக்கும் தவறை புரிந்துகொள்ள எங்களுக்கு உதவுங்கள்",
+	"Please validate any error message before proceeding": "தொடர்வதற்கு முன் இருக்கின்ற பிழை செய்தியை சரிபார்க்கவும்"
 }
