--- a/locales/te.json
+++ b/locales/te.json
@@ -178,6 +178,6 @@
 	"National Language Translation Mission": "జాతీయ భాషా అనువాద మిషన్",
 	"Download": "డౌన్\u200Cలోడ్ చేయండి",
 	"Badge ID": "బ్యాడ్జ్ ID",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Help us understand what’s wrong with the recording": "రికార్డింగ్\u200Cలో తప్పు ఏమిటో అర్థం చేసుకోవడానికి మాకు సహాయపడండి",
+	"Please validate any error message before proceeding": "కొనసాగడానికి ముందు ఏదైనా దోష సందేశాన్ని ధృవీకరించండి"
 }
