--- a/locales/mr.json
+++ b/locales/mr.json
@@ -175,6 +175,6 @@
 	"National Language Translation Mission": "राष्ट्रीय भाषा अनुवाद मिशन",
 	"Badge ID": "बॅज आयडी",
 	"Download": "डाउनलोड करा",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Help us understand what’s wrong with the recording": "रेकॉर्डिंगमध्ये काय चूकीचे आहे, हे समजण्यास आम्हाला मदत करा",
+	"Please validate any error message before proceeding": "कृपया पुढे जाण्यापूर्वी, कोणत्याही प्रकारच्या त्रुटी संदेशाचे प्रमाणीकरण करा"
 }
