--- a/locales/bn.json
+++ b/locales/bn.json
@@ -274,5 +274,14 @@
 	"Badge ID": "ব্যাজ পরিচয়পত্র",
 	"Download": "ডাউনলোড",
 	"Help us understand what’s wrong with the recording": "রেকর্ডিং-এ কি ভুল হয়েছে তা আমাদের বুঝতে সাহায্য করুন",
-	"Please validate any error message before proceeding": "এগিয়ে যাওয়ার আগে যে কোনো ত্রুটি বার্তা বৈধ করুন"
+	"Please validate any error message before proceeding": "এগিয়ে যাওয়ার আগে যে কোনো ত্রুটি বার্তা বৈধ করুন",
+	"SKIP": "SKIP",
+	"Next": "Next",
+	"CLOSE": "CLOSE",
+	"Back": "Back",
+	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
+	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
+	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
+	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+
 }
