--- a/locales/mr.json
+++ b/locales/mr.json
@@ -176,5 +176,14 @@
 	"Badge ID": "बॅज आयडी",
 	"Download": "डाउनलोड करा",
 	"Help us understand what’s wrong with the recording": "रेकॉर्डिंगमध्ये काय चूकीचे आहे, हे समजण्यास आम्हाला मदत करा",
-	"Please validate any error message before proceeding": "कृपया पुढे जाण्यापूर्वी, कोणत्याही प्रकारच्या त्रुटी संदेशाचे प्रमाणीकरण करा"
+	"Please validate any error message before proceeding": "कृपया पुढे जाण्यापूर्वी, कोणत्याही प्रकारच्या त्रुटी संदेशाचे प्रमाणीकरण करा",
+	"SKIP": "SKIP",
+	"Next": "Next",
+	"CLOSE": "CLOSE",
+	"Back": "Back",
+	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
+	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
+	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
+	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+
 }
