--- a/locales/pa.json
+++ b/locales/pa.json
@@ -266,5 +266,14 @@
 	"Please test your <b>speakers</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਸਪੀਕਰਾਂ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Gender Distribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਵੰਡ",
 	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding",
+	"SKIP": "SKIP",
+	"Next": "Next",
+	"CLOSE": "CLOSE",
+	"Back": "Back",
+	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
+	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
+	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
+	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+
 }
