--- a/locales/ta.json
+++ b/locales/ta.json
@@ -176,5 +176,14 @@
 	"Badge ID": "பேட்ஜ் ஐடி",
 	"Download": "பதிவிறக்கவும்",
 	"Help us understand what’s wrong with the recording": "பதிவில் இருக்கும் தவறை புரிந்துகொள்ள எங்களுக்கு உதவுங்கள்",
-	"Please validate any error message before proceeding": "தொடர்வதற்கு முன் இருக்கின்ற பிழை செய்தியை சரிபார்க்கவும்"
+	"Please validate any error message before proceeding": "தொடர்வதற்கு முன் இருக்கின்ற பிழை செய்தியை சரிபார்க்கவும்",
+	"SKIP": "SKIP",
+	"Next": "Next",
+	"CLOSE": "CLOSE",
+	"Back": "Back",
+	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
+	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
+	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
+	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+
 }
