--- a/locales/ml.json
+++ b/locales/ml.json
@@ -223,13 +223,13 @@
 	"START CONTRIBUTING": "സംഭാവന ചെയ്യാൻ തുടങ്ങാം",
 	"Please validate any error message before proceeding": "തുടരുന്നതിനു മുമ്പ് ഏതെങ്കിലും പിശക് സന്ദേശം സാധൂകരിക്കുക",
 	"Help us understand what’s wrong with the recording": "റെക്കോ൪ഡിംഗിൽ എന്താണ് തെറ്റ് എന്ന് മനസിലാക്കാൻ ഞങ്ങളെ സഹായിക്കുക",
-	"SKIP": "SKIP",
-	"Next": "Next",
-	"CLOSE": "CLOSE",
-	"Back": "Back",
-	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
-	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
-	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
-	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+	"SKIP": "ഒഴിവാക്കുക",
+	"Next": "അടുത്തത്",
+	"CLOSE": "അടയ്ക്കുക",
+	"Back": "തിരികെ",
+	"You can select the language in which you want to participate": "നിങ്ങൾക്ക് പങ്കെടുക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ തിരഞ്ഞെടുക്കാം",
+	"You can change the language in which you want to read content": "ഉള്ളടക്കം വായിക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ നിങ്ങൾക്ക് മാറ്റാൻ കഴിയും",
+	"Click on the card to start contributing your voice": "നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യാൻ ആരംഭിക്കുന്നതിന് കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
+	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക"
 
 }
