--- a/locales/or.json
+++ b/locales/or.json
@@ -243,13 +243,13 @@
 	"Download": "ଡାଉନଲୋଡ୍ କରନ୍ତୁ",
 	"Help us understand what’s wrong with the recording": "ରେକର୍ଡିଂରେ କ’ଣ ଭୁଲ୍ ଅଛି ତାହା ବୁଝିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ",
 	"Please validate any error message before proceeding": "ଆଗକୁ ଯିବା ପୂର୍ବରୁ ଦୟାକରି କୌଣସି ତ୍ରୁଟି ସନ୍ଦେଶକୁ ବୈଧ କରନ୍ତୁ ",
-	"SKIP": "SKIP",
-	"Next": "Next",
-	"CLOSE": "CLOSE",
-	"Back": "Back",
-	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
-	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
-	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
-	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+	"SKIP": "ଏଡାନ୍ତୁ",
+	"Next": "ପରବର୍ତ୍ତୀ",
+	"CLOSE": "ବନ୍ଦ",
+	"Back": "ପଛକୁ",
+	"You can select the language in which you want to participate": "ଆପଣ ଯେଉଁ ଭାଷାକୁ ଅଂଶଗ୍ରହଣ କରିବାକୁ ଚାହୁଁଛନ୍ତି ତାହା ଚୟନ କରିପାରିବେ",
+	"You can change the language in which you want to read content": "ଆପଣ ଯେଉଁ ଭାଷା ବିଷୟବସ୍ତୁ ପଢିବାକୁ ଚାହୁଁଛନ୍ତି ସେହି ଭାଷାକୁ ଆପଣ ପରିବର୍ତ୍ତନ କରିପାରିବେ",
+	"Click on the card to start contributing your voice": "ତୁମର ସ୍ୱର ପ୍ରଦାନ ଆରମ୍ଭ କରିବା ପାଇଁ କାର୍ଡ ଉପରେ କ୍ଲିକ୍ କର",
+	"Click on the card to validate what others have spoken":"ଅନ୍ୟମାନେ ଯାହା କହିଛନ୍ତି ତାହା ବୈଧ କରିବାକୁ କାର୍ଡରେ କ୍ଲିକ୍ କରନ୍ତୁ"
 
 }
