--- a/locales/ml.json
+++ b/locales/ml.json
@@ -162,7 +162,7 @@
 	"Quick Tips": "ക്വിക്ക് ടിപ്സ്",
 	"Read once <b>before recording it</b>": "റെക്കോർഡ് ചെയ്യുന്നതിനു മുൻപ് ഒരു തവണ വായിച്ചു നോക്കുക",
 	"You are a champion": "നിങ്ങളൊരു ജേതാവായിരിക്കുന്നു",
-	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"WooHoo!! You took the first important step": "കൊള്ളാം നിങ്ങൾ ആദ്യചുവട് വച്ചിരിക്കുന്നു",
 	"recordings contributed": "റെക്കോർഡിംഗുകൾ സംഭാവന ചെയ്തു",
 	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "നിങ്ങൾക്ക് <span id=\"badgeName\"></span> ബാഡ്ജ് നേടാൻ <span id=\"remainingSentences\"></span> വാക്യങ്ങൾ കൂടി മാത്രമേ ബാക്കിയുള്ളൂ.",
 	"Did you know?": "നിങ്ങൾക്കറിയുമോ?",
@@ -187,7 +187,7 @@
 	"Thank You for your valuable feedback": "നിങ്ങളുടെ വിലയേറിയ ഫീഡ്ബാക്കിന് നന്ദി",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "നിങ്ങളുടെ ഫീഡ്ബാക്ക് പറയൂ ഇന്ത്യയെ പ്രസക്തമായി നിലനി൪ത്താ൯ ഞങ്ങളെ സഹായിക്കുന്നു. ഫീഡ്ബാക്ക് നൽകാൻ നിങ്ങൾ സമയമെടുക്കുന്നതിനെ ഞങ്ങൾ അഭിനന്ദിക്കുന്നു",
 	"Back to Home": "തിരികെ ഹോം പേജിലേക്ക്",
-	"Report": "Report",
+	"Report": "റിപ്പോ൪ട്ട് ചെയ്യുക",
 	"Please speak clearly": "വ്യക്തമായി സംസാരിക്കുക",
 	"Low/No Background Noise": "മറ്റു ശബ്ദങ്ങൾ ഇല്ല /കുറവാണ്",
 	"Background Noise Detected": "പശ്ചാത്തല ശബ്ദങ്ങൾ കേൾക്കുന്നു",
@@ -204,11 +204,10 @@
 	"Please specify the reason (Optional)": "ദയവായി കാരണം ബോധിപ്പിക്കുക",
 	"Thank You": "നന്ദി",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "നിങ്ങളുടെ ഫീഡ്ബാക്ക് പറയൂ ഇന്ത്യയെ പ്രസക്തമായി നിലനി൪ത്താ൯ ഞങ്ങളെ സഹായിക്കുന്നു. ഫീഡ്ബാക്ക് നൽകാൻ നിങ്ങൾ സമയമെടുക്കുന്നതിനെ ഞങ്ങൾ അഭിനന്ദിക്കുന്നു.",
-	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
-	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
+	"Thank you for your enthusiasm to validate the recordings.": "രേഖപ്പെടുത്തലുകൾ സാധൂകരിക്കുന്നതിൽ നിങ്ങൾ കാണിച്ച താൽപര്യത്തിന് നന്ദി",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "<span id=\"spn-validation-language\"></span> ഭാഷയിൽ ഞങ്ങൾക്ക് വിവരശേഖരമില്ല.ദയവായി പിന്നീട് ശ്രമിക്കുക",
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
 	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദം തിരിച്ചറിയാനുള്ള സംവിധാനങ്ങളിൽ ഇന്ത്യ സ്വയം പര്യാപ്തത നേടേണ്ടതാണ്.ഇതിനായി ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദങ്ങൾ നിറഞ്ഞ ഒരു സ്വതന്ത്ര ശബ്ദശേഖരം സൃഷ്ടിക്കുന്നതിന് നമ്മൾ ആഗ്രഹിക്കുന്നു.ഇന്ത്യ ഗവണമെന്റിന്റെ ദേശീയ ഭാഷ ത൪ജ്ജമ ദൗത്യത്തിനു കീഴിൽഎംഈഐറ്റിവൈ ആണ് നി൪വ്വഹിക്കുന്നത്.ഏക്സ്റ്റെപ് ഫൗണ്ടേഷൻ അതിന്റെ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a>  പോലെയുള്ള വിവിധ സംവിധാനങ്ങളിലൂടെ ഇതിനെ പിന്തുണക്കുന്നു.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ഇതിനായി പറയൂ ഇന്ത്യ സ്വമനസ്സാ നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യുന്നതിന് നിങ്ങളെ ക്ഷണിക്കുന്നു.നിങ്ങളുടെ എല്ലാ സംഭാവനകളും ഉപയോഗപ്രദമായ രീതിയിൽ സമൂഹത്തിന് ലഭ്യമാക്കുന്നു. പിന്നീട് ഭാഷാ സാങ്കേതിക വിദഗ്ദ൪ ഈ സംഭാവനകളെ  ലോക നിലവാരത്തിലുള്ള  ശബ്ദതിരിച്ചറിയൽ സംവിധാനങ്ങൾ വികസിപ്പിക്കുന്നതിന് ഉപയോഗിക്കുന്നു.",
 	"India is a land of many languages, our digital strategy must reflect it.": "ഡിജിറ്റൽ സാങ്കേതികവിദ്യയ്ക്ക് പ്രാഥമിക പരിഗണന നൽകുന്ന സംവിധാനത്തിൽ നമ്മുടെ ബഹുഭാഷാ ഡിഎൻഎയുടെ അഭാവം ഇപ്പോഴുമുണ്ട്",
@@ -223,7 +222,6 @@
 	"START CONTRIBUTING": "സംഭാവന ചെയ്യാൻ തുടങ്ങാം",
 	"Please validate any error message before proceeding": "തുടരുന്നതിനു മുമ്പ് ഏതെങ്കിലും പിശക് സന്ദേശം സാധൂകരിക്കുക",
 	"Help us understand what’s wrong with the recording": "റെക്കോ൪ഡിംഗിൽ എന്താണ് തെറ്റ് എന്ന് മനസിലാക്കാൻ ഞങ്ങളെ സഹായിക്കുക",
-	"SKIP": "ഒഴിവാക്കുക",
 	"Next": "അടുത്തത്",
 	"CLOSE": "അടയ്ക്കുക",
 	"Back": "തിരികെ",
@@ -231,5 +229,4 @@
 	"You can change the language in which you want to read content": "ഉള്ളടക്കം വായിക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ നിങ്ങൾക്ക് മാറ്റാൻ കഴിയും",
 	"Click on the card to start contributing your voice": "നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യാൻ ആരംഭിക്കുന്നതിന് കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
 	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക"
-
 }
