--- a/locales/ml.json
+++ b/locales/ml.json
@@ -128,8 +128,8 @@
 	"If you are unsure of the match, skip the particular voice sample": "പൊരുത്തപ്പെടുന്നുണ്ടോ എന്ന് ഉറപ്പില്ലെങ്കിൽ, ആ ശബ്ദ സാമ്പിൾ ഒഴിവാക്കുക",
 	"Username cannot be more than 12 characters": "യൂസർനെയിമിൽ 12 പ്രതീകങ്ങളിൽ കൂടുതൽ പാടില്ല",
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
-	"hrs recorded in": "",
-	"hrs validated in": "",
+	"hrs recorded in": "%language എന്ന ഭാഷയിൽ സാധൂകരിച്ച മണിക്കൂർ %hours",
+	"hrs validated in": "%language എന്ന ഭാഷയിൽ റെക്കോർഡ് ചെയ്ത മണിക്കൂർ %hours",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻ്റിന് ശേഷം റെക്കോർഡിംഗ് താനേ നിൽക്കും",
 	"Incorrect": "തെറ്റ്",
 	"Replay": "വീണ്ടും പ്ലേ ചെയ്യുക",
@@ -228,5 +228,21 @@
 	"You can select the language in which you want to participate": "നിങ്ങൾക്ക് പങ്കെടുക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ തിരഞ്ഞെടുക്കാം",
 	"You can change the language in which you want to read content": "ഉള്ളടക്കം വായിക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ നിങ്ങൾക്ക് മാറ്റാൻ കഴിയും",
 	"Click on the card to start contributing your voice": "നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യാൻ ആരംഭിക്കുന്നതിന് കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
-	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക"
+	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
+	"Help your own language": "നിങ്ങളുടെ മാതൃഭാഷയെ പരിപോഷിപ്പിക്കൂ",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
