--- a/locales/bn.json
+++ b/locales/bn.json
@@ -282,6 +282,20 @@
 	"You can select the language in which you want to participate": "আপনি ভাষা নির্বাচন করতে পারেন যাতে আপনি অংশগ্রহণ করতে চান",
 	"You can change the language in which you want to read content": "আপনি ভাষা বদলাতে পারেন যাতে আপনি যে বিষয় পড়তে চান",
 	"Click on the card to start contributing your voice": "আপনার স্বর অবদান শুরু করতে কার্ড-এ ক্লিক করুন",
-	"Click on the card to validate what others have spoken":"অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন"
-
+	"Click on the card to validate what others have spoken":"অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন",
+	"Download": "ডাউনলোড",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
