--- a/locales/en.json
+++ b/locales/en.json
@@ -271,22 +271,25 @@
 	"Click on the card to validate what others have spoken": "Click on the card to validate what others have spoken",
 	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"Bronze": "Bronze",
-	"Silver": "Silver",
-	"Gold": "Gold",
-	"Platinum": "Platinum",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
 	"Contributor Levels": "Contributor Levels",
 	"Participate more to gain badges": "Participate more to gain badges",
 	"Level": "Level",
 	"Contributions": "Contributions",
+	"Sentences": "Sentences",
 	"(Recording + Validating)": "(Recording + Validating)",
 	"Badge": "Badge",
-	"Level 1": "Level 1",
 	"N/A": "N/A",
 	"You are on a spree !!": "You are on a spree !!",
 	"National Language Translation Mission": "National Language Translation Mission",
 	"Download": "Download",
 	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
+	"<span id=\"badge-name-2\">1st</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">1st</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
+	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>",
+	"Know more": "Know more",
 	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
 	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>"
 }
