--- a/locales/gu.json
+++ b/locales/gu.json
@@ -185,6 +185,19 @@
 	"You can select the language in which you want to participate": "તમે જેમાં ભાગ લેવા માંગતા હોવ તે ભાષા પસંદ કરી શકો છો",
 	"You can change the language in which you want to read content": "તમે જેમાં સામગ્રી વાંચવા માંગતા હોવ તે ભાષા બદલી શકો છો",
 	"Click on the card to start contributing your voice": "તમારા અવાજનો ફાળો આપવા માટે કાર્ડ પર ક્લિક કરો",
-	"Click on the card to validate what others have spoken":"અન્ય લોકો બોલ્યા હોય તેને માન્યતા આપવા માટે કાર્ડ પર ક્લિક કરો"
-
+	"Click on the card to validate what others have spoken":"અન્ય લોકો બોલ્યા હોય તેને માન્યતા આપવા માટે કાર્ડ પર ક્લિક કરો",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
