--- a/locales/hi.json
+++ b/locales/hi.json
@@ -239,5 +239,19 @@
 	"You can select the language in which you want to participate": "आप जिस भाषा में योगदान देना चाहते हैं, उसे चुन सकते हैं",
 	"You can change the language in which you want to read content": "आप जिस भाषा में कॉन्टेंट पढ़ना चाहते हैं, उस भाषा में बदल सकते हैं",
 	"Click on the card to start contributing your voice": "अपनी आवाज़ का योगदान देना शुरू करने के लिए कार्ड पर क्लिक करें",
-	"Click on the card to validate what others have spoken":"दूसरे लोगों ने जो बोला है उसकी पुष्टि करने के लिए कार्ड पर क्लिक करें"
+	"Click on the card to validate what others have spoken":"दूसरे लोगों ने जो बोला है उसकी पुष्टि करने के लिए कार्ड पर क्लिक करें",
+	"Levels and Badging @BoloIndia": "लेवल और बैज @बोलो इंडिया",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "ब्रॉन्ज",
+	"silver": "सिल्वर",
+	"gold": "गोल्ड",
+	"platinum": "प्लैटिनम",
+	"Contributor Levels": "योगदानकर्ता के लेवल",
+	"Participate more to gain badges": "बैज पाने के लिए और भागीदारी करें",
+	"Level": "लेवल",
+	"Sentences": "वाक्य",
+	"Contributions": "योगदान",
+	"(Recording + Validating)": "(रिकॉर्डिंग + पुष्टि)",
+	"Badge": "बैज",
+	"N/A": "उपलब्ध नहीं"
 }
