--- a/locales/kn.json
+++ b/locales/kn.json
@@ -207,6 +207,20 @@
 	"You can select the language in which you want to participate": "ನೀವು ಭಾಗವಹಿಸಬಯಸುವ ಭಾಷೆಯನ್ನು ನೀವು ಆಯ್ಕೆಮಾಡಬಹುದು",
 	"You can change the language in which you want to read content": "ನೀವು ವಿಷಯವನ್ನು ಓದಬಯಸುವ ಭಾಷೆಯನ್ನು ನೀವು ಬದಲಾಯಿಸಬಹುದು",
 	"Click on the card to start contributing your voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡುವುದನ್ನು ಪ್ರಾರಂಭಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
-	"Click on the card to validate what others have spoken":"ಇತರರು ಮಾತನಾಡಿದುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ"
-
+	"Click on the card to validate what others have spoken":"ಇತರರು ಮಾತನಾಡಿದುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
+	"Download": "ಡೌನ್ ಲೋಡ್",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
