--- a/locales/hi.json
+++ b/locales/hi.json
@@ -229,5 +229,19 @@
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
 	"National Language Translation Mission": "नेशनल लैंग्वेज ट्रांसलेशन मिशन",
-	"Download": "डाउनलोड करें"
+	"Download": "डाउनलोड करें",
+	"Levels and Badging @BoloIndia": "लेवल और बैज @बोलो इंडिया",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "ब्रॉन्ज",
+	"silver": "सिल्वर",
+	"gold": "गोल्ड",
+	"platinum": "प्लैटिनम",
+	"Contributor Levels": "योगदानकर्ता के लेवल",
+	"Participate more to gain badges": "बैज पाने के लिए और भागीदारी करें",
+	"Level": "लेवल",
+	"Sentences": "वाक्य",
+	"Contributions": "योगदान",
+	"(Recording + Validating)": "(रिकॉर्डिंग + पुष्टि)",
+	"Badge": "बैज",
+	"N/A": "उपलब्ध नहीं"
 }
