--- a/locales/gu.json
+++ b/locales/gu.json
@@ -178,22 +178,16 @@
 	"Download": "ડાઉનલોડ કરો",
 	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"Bronze": "Bronze",
-	"Silver": "Silver",
-	"Gold": "Gold",
-	"Platinum": "Platinum",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
 	"Contributor Levels": "Contributor Levels",
 	"Participate more to gain badges": "Participate more to gain badges",
 	"Level": "Level",
 	"Contributions": "Contributions",
+	"Sentences": "Sentences",
 	"(Recording + Validating)": "(Recording + Validating)",
 	"Badge": "Badge",
-	"Level 1": "Level 1",
-	"<span class=\"level-count\">1</span> Senetences": "<span class=\"level-count\">1</span> Senetences",
-	"N/A": "N/A",
-	"Level 2": "Level 2",
-	"Level 3": "Level 3",
-	"Level 4": "Level 4",
-	"Level 5": "Level 5",
-	"Level 6": "Level 6"
+	"N/A": "N/A"
 }
