--- a/locales/kn.json
+++ b/locales/kn.json
@@ -197,5 +197,19 @@
 	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ",
 	"National Language Translation Mission": "ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ",
 	"Badge ID": "ಬ್ಯಾಜ್ ಐಡಿ",
-	"Download": "ಡೌನ್ ಲೋಡ್"
+	"Download": "ಡೌನ್ ಲೋಡ್",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
