--- a/locales/mr.json
+++ b/locales/mr.json
@@ -174,5 +174,19 @@
 	"Age Group Distribution": "वय गट वर्गीकरण",
 	"National Language Translation Mission": "राष्ट्रीय भाषा अनुवाद मिशन",
 	"Badge ID": "बॅज आयडी",
-	"Download": "डाउनलोड करा"
+	"Download": "डाउनलोड करा",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
