--- a/locales/or.json
+++ b/locales/or.json
@@ -240,5 +240,19 @@
 	"Back to Home": "ଘରକୁ ଫେରନ୍ତୁ",
 	"National Language Translation Mission": "ଜାତୀୟ ଭାଷା ଅନୁବାଦ ମିଶନ୍",
 	"Badge ID": "ବ୍ୟାଜ୍ ID",
-	"Download": "ଡାଉନଲୋଡ୍ କରନ୍ତୁ"
+	"Download": "ଡାଉନଲୋଡ୍ କରନ୍ତୁ",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"Sentences": "Sentences",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"N/A": "N/A"
 }
