--- a/locales/te.json
+++ b/locales/te.json
@@ -177,5 +177,19 @@
 	"Most Contributed - <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>",
 	"National Language Translation Mission": "జాతీయ భాషా అనువాద మిషన్",
 	"Download": "డౌన్\u200Cలోడ్ చేయండి",
-	"Badge ID": "బ్యాడ్జ్ ID"
+	"Badge ID": "బ్యాడ్జ్ ID",
+	"Levels and Badging @BoloIndia": "లెవల్స్ మరియు బ్యాడ్జింగ్ @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"bronze": "బ్రాంజ్",
+	"silver": "సిల్వర్",
+	"gold": "గోల్డ్",
+	"platinum": "ప్లాటినం",
+	"Contributor Levels": "కంట్రిబ్యూటర్ లెవల్స్",
+	"Participate more to gain badges": "బ్యాడ్జ్లను పొందడానికి మరింత పాల్గొనండి",
+	"Level": "లెవల్",
+	"Contributions": "కాంట్రిబ్యూషన్స్",
+	"Sentences": "వాక్యాలు",
+	"(Recording + Validating)": "(రికార్డింగ్ + ధ్రువీకరిస్తోంది)",
+	"Badge": "బ్యాడ్జ్",
+	"N/A": "N/A"
 }
