| Priyanshu | made badge_info page translation for as,or,mr,te,ml

--- a/locales/ml.json
+++ b/locales/ml.json
@@ -231,18 +231,18 @@
 	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
 	"Help your own language": "നിങ്ങളുടെ മാതൃഭാഷയെ പരിപോഷിപ്പിക്കൂ",
 	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "ലെവലും ബാഡ്ജിംഗും @പറയൂ ഇന്ത്യ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "വെങ്കലം",
+	"silver": "വെള്ളി",
+	"gold": "സ്വ൪ണ്ണം",
+	"platinum": "പ്ലാറ്റിനം",
+	"Contributor Levels": "സംഭാവക നിലകൾ",
+	"Participate more to gain badges": "ബാഡ്ജുകൾ നേടുന്നതിന് കൂടുതൽ പങ്കെടുക്കുക",
+	"Level": "ലെവൽ",
+	"Contributions": "സംഭാവനകൾ",
+	"Sentences": "വാക്യങ്ങൾ",
+	"(Recording + Validating)": "(റെക്കോ൪ഡിംഗ് + മൂല്യനി൪ണ്ണയം)",
+	"Badge": "ബാഡ്ജ്",
+	"N/A": "ബാധകമല്ല"
 }
