--- a/locales/mr.json
+++ b/locales/mr.json
@@ -185,18 +185,18 @@
 	"You can change the language in which you want to read content": "आपण ज्या भाषेची सामग्री वाचू इच्छिता, ती भाषा बदलू शकता",
 	"Click on the card to start contributing your voice": "आपल्या आवाजाचे योगदान देण्याची सुरू करण्यासाठी कार्डवर क्लिक करा",
 	"Click on the card to validate what others have spoken":"इतरांनी जे बोलले आहे ते प्रमाणित करण्यासाठी कार्डवर क्लिक करा",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "लेवर आणि बॅज @बोला भारत",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ब्रॉन्झ",
+	"silver": "सिल्वर",
+	"gold": "गोल्ड",
+	"platinum": "प्लॅटिनम",
+	"Contributor Levels": "योगदानकर्त्याचा स्तर",
+	"Participate more to gain badges": "बॅज मिळविण्यासाठी आणखी सहभाग घ्या",
+	"Level": "लेवल",
+	"Contributions": "योगदान",
+	"Sentences": "वाक्य",
+	"(Recording + Validating)": "(रेकॉर्डिंग + प्रमाणीकरण)",
+	"Badge": "बॅज",
+	"N/A": "उपलब्ध नाही"
 }
