--- a/locales/as.json
+++ b/locales/as.json
@@ -292,18 +292,18 @@
 	"You can change the language in which you want to read content": "আপুনি সমল পঢ়িব বিচৰা ভাষাটো সলনি কৰিব পাৰে",
 	"Click on the card to start contributing your voice": "আপোনাৰ কণ্ঠস্বৰৰ অৱদান আৰম্ভ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
 	"Click on the card to validate what others have spoken":"আনসকলে কি কৈছে সেয়া বৈধকৰণ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "স্তৰসমূহ আৰু বেজবোৰ @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ব্ৰঞ্জ",
+	"silver": "ৰূপ",
+	"gold": "সোণ",
+	"platinum": "প্লেটিনাম",
+	"Contributor Levels": "অৱদানকাৰীৰ স্তৰ",
+	"Participate more to gain badges": "বেজ প্ৰাপ্তিৰ বাবে অধিক অংশগ্ৰহণ কৰক",
+	"Level": "স্তৰ",
+	"Contributions": "অৱদানবোৰ",
+	"Sentences": "টা বাক্য",
+	"(Recording + Validating)": "(বাণীবদ্ধকৰণ + বৈধতাকৰণ)",
+	"Badge": "বেজ",
+	"N/A": "উপলব্ধ নহয়"
 }
