--- a/locales/gu.json
+++ b/locales/gu.json
@@ -185,18 +185,18 @@
 	"You can change the language in which you want to read content": "તમે જેમાં સામગ્રી વાંચવા માંગતા હોવ તે ભાષા બદલી શકો છો",
 	"Click on the card to start contributing your voice": "તમારા અવાજનો ફાળો આપવા માટે કાર્ડ પર ક્લિક કરો",
 	"Click on the card to validate what others have spoken":"અન્ય લોકો બોલ્યા હોય તેને માન્યતા આપવા માટે કાર્ડ પર ક્લિક કરો",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍ @ ବୋଲୋ ଇଣ୍ଡିଆ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ପିତ୍ତଳ",
+	"silver": "ରୂପା",
+	"gold": "ସୁନା",
+	"platinum": "ପ୍ଲାଟିନମ୍",
+	"Contributor Levels": "ଯୋଗଦାନକାରୀ ସ୍ତର",
+	"Participate more to gain badges": "ବ୍ୟାଜ୍ ପାଇବା ପାଇଁ ଅଧିକ ଅଂଶଗ୍ରହଣ କରନ୍ତୁ",
+	"Level": "ସ୍ତର",
+	"Contributions": "ଅବଦାନ",
+	"Sentences": "ବାକ୍ୟଗୁଡ଼ିକ",
+	"(Recording + Validating)": "(ରେକର୍ଡିଂ + ବୈଧତା)",
+	"Badge": "ବ୍ୟାଜ୍",
+	"N/A": "ଏନ୍\u200C/ଏ"
 }
